--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "wongames-client",
-  "version": "1.0.0",
+  "name": "react-avancado-boilerplate",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
+    "prepare": "husky install",
     "test": "jest",
     "test:watch": "yarn test --watch",
-    "generate": "yarn plop --plopfile generators/plopfile.js",
     "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook -s ./public"
+    "build-storybook": "build-storybook -s ./public",
+    "cross-env": "cross-env NODE_ENV=production yarn build",
+    "generate": "yarn plop --plopfile ./generators/plopfile.js"
   },
   "husky": {
     "hooks": {
@@ -25,38 +26,42 @@
     ]
   },
   "dependencies": {
-    "next": "9.5.2",
-    "next-pwa": "^3.1.1",
+    "@styled-icons/material-outlined": "10.34.0",
+    "@styled-icons/remix-fill": "10.18.0",
+    "cross-env": "^7.0.3",
+    "next": "9.4.4",
+    "next-pwa": "2.6.1",
+    "plop": "2.7.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "5.1.1",
+    "styled-media-query": "2.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
+    "@babel/core": "^7.11.1",
     "@babel/preset-typescript": "^7.10.4",
-    "@storybook/addon-essentials": "6.0.16",
-    "@storybook/react": "6.0.16",
-    "@testing-library/jest-dom": "^5.11.3",
-    "@testing-library/react": "^10.4.9",
-    "@types/jest": "^26.0.10",
-    "@types/node": "^14.6.0",
+    "@storybook/addon-essentials": "6.0.10",
+    "@storybook/react": "6.0.10",
+    "@testing-library/jest-dom": "^5.11.2",
+    "@testing-library/react": "^10.4.8",
+    "@types/jest": "^26.0.9",
+    "@types/node": "^14.0.27",
     "@types/react": "^16.9.46",
     "@types/styled-components": "^5.1.2",
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.11.1",
-    "eslint": "^7.7.0",
+    "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
-    "husky": "^4.2.5",
-    "jest": "^26.4.1",
-    "jest-styled-components": "^7.0.3",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "husky": "^7.0.4",
+    "jest": "^26.3.0",
+    "jest-styled-components": "^7.0.2",
     "lint-staged": "^10.2.11",
-    "plop": "^2.7.4",
     "prettier": "^2.0.5",
-    "typescript": "^4.0.2"
+    "typescript": "^3.9.7"
   }
 }
